<resources>
    <string name="app_name">test</string>
    <string name="find_your_parking_lot_today">Find your parking lot today</string>
    <string name="start">Start</string>
    <string name="Sign_In">Sign In</string>
    <string name="todo">TODO</string>
    <string name="enter_the_student_s_id">Enter the student\'s ID</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="msg_sample">Forget your code Contact.</string>
    <string name="msg_linkable">Contact</string>
    <string name="Settings">Settings</string>
    <string name="save_change">SAVE CHANGE</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="favourite">Favourite</string>
    <string name="add_your_favourite">Add your favourite</string>
    <string name="choose_on_map">Choose on map</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="display">Display</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">LOG OUT</string>
    <string name="my_favourite">My favourite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
