<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/displaybg">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="267dp"
        android:layout_height="50dp"
        android:fontFamily="@font/monsemibold"
        android:text="@string/Settings"
        android:textColor="#000000"
        android:textSize="37sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <ImageView
        android:id="@+id/notifications"
        android:layout_width="350dp"
        android:layout_height="89dp"
        android:layout_centerInParent="true"
        android:background="@drawable/displaybox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Switch
        android:id="@+id/swbutton"
        android:layout_width="54dp"
        android:layout_height="39dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />

    <Button
        android:id="@+id/display"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="89dp"
        android:adjustViewBounds="true"
        android:background="@drawable/setbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <Button
        android:id="@+id/about"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="89dp"
        android:adjustViewBounds="true"
        android:background="@drawable/setbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408" />

    <Button
        android:id="@+id/account"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="350dp"
        android:layout_height="89dp"
        android:adjustViewBounds="true"
        android:background="@drawable/setbox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <ImageView
        android:id="@+id/accounticon"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/acicon"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        tools:targetApi="donut" />

    <ImageView
        android:id="@+id/seticon"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:adjustViewBounds="true"
        android:background="@drawable/seticon"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418"
        tools:targetApi="donut" />

    <ImageView
        android:id="@+id/displayimage"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:adjustViewBounds="true"
        android:background="@drawable/displayicon"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555"
        tools:targetApi="donut" />

    <ImageView
        android:id="@+id/notification"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:adjustViewBounds="true"
        android:background="@drawable/notiicon"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705"
        tools:targetApi="donut" />

    <TextView
        android:id="@+id/accounttext"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/alithin"
        android:text="@string/account"
        android:textColor="#5E5C5C"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/abouttext"
        android:layout_width="141dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/alithin"
        android:text="@string/about"
        android:textColor="#5E5C5C"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.292"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/displaytext"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/alithin"
        android:text="@string/display"
        android:textColor="#5E5C5C"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <TextView
        android:id="@+id/notitext"
        android:layout_width="148dp"
        android:layout_height="32dp"
        android:adjustViewBounds="true"
        android:fontFamily="@font/alithin"
        android:text="@string/notifications"
        android:textColor="#5E5C5C"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.301"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:adjustViewBounds="true"
        android:background="@drawable/logout"
        android:fontFamily="@font/alireg"
        android:text="@string/log_out"
        android:textColor="#ffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

</androidx.constraintlayout.widget.ConstraintLayout>

